<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2018 The Android Open Source Project
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">HMS Communicator</string>

    <!-- Menu strings -->
    <string name="shopping_cart">Shopping Cart</string>
    <string name="settings">Settings</string>
    <string name="outdoor">Outdoor</string>
    <string name="chat">Chat</string>
    <string name="deeplink">AI Tools</string>

    <!-- Screen strings -->
    <string name="step_one">Step One</string>
    <string name="step_two">Step Two</string>
    <string name="deep_link_instructions">Type your deep link args</string>
    <string name="settings_fragment_text">Settings Fragment</string>
    <string name="shopping_fragment_text">Shopping Fragment</string>
    <string name="navigate_destination_button">Navigate to destination</string>
    <string name="navigate_action_button">Navigate with action</string>
    <string name="next_step_button">Navigate next step</string>
    <string name="finish_button">Finish Flow</string>
    <string name="send_deep_link_notification_button">Send deep link notification</string>
    <!--    <string name="chat">Chat</string>-->
    <string name="subject">Translate the words in your photo</string>
    <string name="take_photo">take photo</string>
    <string name="select_photo">Photo Translate</string>
    <string name="asr_translator">Speech Translate</string>
    <string name="detail">Choose a photo to do the translation</string>
    <string name="please_select_picture">Please select a photo to process~</string>
    <string name="camera_permission_rationale">This app requires camera and storage access in order to
        demo the API.</string>
    <string name="cancel">cancel</string>
    <string name="select_picture">Select Picture</string>
    <string name="take_picture">Take Picture</string>
    <string name="translate">Translate</string>
    <string name="save">Save</string>
    <string name="translate_success">Translate success</string>
    <string name="translate_start">Translate starts</string>
    <string name="no_pic_neededSave">Null Image needed to save</string>
    <string name="save_success">Save success</string>
    <string name="title">Translators</string>
    <string name="entoch">English to Chinese</string>
    <string name="play_audio">Play it</string>

    <string name="mode_search_button">Search Nearby Users</string>
    <string name="mode_chatroom_button">Enter Chat Room ID</string>
    <string name="mode_username_button">Enter Both Usernames</string>
    <string name="error_missing_permissions">Cannot start without required permissions</string>
    <string name="begin_to_n_chat">Begin to\n chat!</string>
    <string name="friend_name">Friend\'s name:</string>
    <string name="my_name">My name: </string>
    <string name="send">send</string>
    <string name="input_message_here">Input message here...</string>
    <string name="picture">Gallery</string>
    <string name="receivedPicture">RECEIVED</string>
    <string name="camera">CAMERA</string>
    <string name="chatroom_id">Enter 4-digit Chat Room ID:</string>
    <string name="create_room">Create a Room</string>
    <string name="join_room">Join a Room</string>
    <string name="capture_image">capture Image</string>
    <string name="stop_image">stop</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="flashMode">FlashMode</string>
    <string name="manualIso">manualIso</string>
    <string name="manualExposure">manualExposure</string>
    <string name="warning_str">CameraKit is not installed or not support this device.</string>
    <string name="slender">Slender</string>
    <string name="skinColor">SkinColor</string>
    <string name="body">Body</string>
    <string name="smooth">SmoothLevel</string>
    <string name="record">StartRec</string>
    <string name="pause">Pause</string>
    <string name="zoom">Zoom</string>
    <string name="stoprecord">StopRec</string>
    <string name="aiMovie">aiMovie</string>
    <string name="resume">Resume</string>
    <string name="normal">Normal</string>
    <string name="bokeh">Bokeh</string>
    <string name="hdr">HDR</string>
    <string name="supernight">Super Night</string>
    <string name="video">Video</string>
    <string name="portrait">Beauty Cam</string>
    <string name="gallary">Gallary</string>
    <string name="switchcam">switch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
