<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">

    <RelativeLayout
        android:id="@+id/usernames_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_my_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_my_name_title"
                android:layout_width="84dp"
                android:layout_height="wrap_content"
                android:text="@string/my_name" />

            <EditText
                android:id="@+id/et_my_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="15"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_friend_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_my_name"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_friend_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friend_name" />

            <EditText
                android:id="@+id/et_friend_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="15"/>
        </LinearLayout>

    </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_chatroom_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_chatroom_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chatroom_id" />

            <EditText
                android:id="@+id/et_chatroom_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="4"/>
        </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_chatroom_button">

        <Button
            android:id="@+id/btn_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginRight="10dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/create_room" />

        <Button
            android:id="@+id/btn_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginLeft="10dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/join_room" />

    </LinearLayout>

    <ListView
        android:id="@+id/lv_chat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@android:color/transparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <Button
            android:id="@+id/btn_picture"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:text="@string/picture" />

        <Button
            android:id="@+id/btn_receivedPicture"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:text="@string/receivedPicture" />

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:text="@string/camera" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_message_here"
            android:layout_weight="1"
            android:layout_marginStart="26dp"
            android:maxLength="600"/>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/send" />

    </LinearLayout>

</LinearLayout>