<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/selectLangView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aitools.LangSelectFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/asr"
            android:layout_width="135dp"
            android:layout_height="76dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/colors_btn"
            android:onClick="translatePhoto"
            android:text="@string/asr_translator"
            android:textColor="#ffffff"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/select_photo"
            app:layout_constraintTop_toBottomOf="@+id/spDestType" />

        <Spinner
            android:id="@+id/spSourceType"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="500dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textColor="@color/secondary_text_color"
            app:layout_constraintEnd_toStartOf="@id/buttonSwitchLang"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></Spinner>

        <ImageButton
            android:id="@+id/buttonSwitchLang"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/translate_switch"
            android:onClick="doLanguageSwitch"
            app:layout_constraintEnd_toStartOf="@+id/spDestType"
            app:layout_constraintStart_toEndOf="@+id/spSourceType"
            app:layout_constraintTop_toTopOf="@id/spSourceType" />

        <Spinner
            android:id="@+id/spDestType"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textAlignment="center"
            android:textColor="@color/secondary_text_color"
            app:layout_constraintBottom_toBottomOf="@id/spSourceType"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/buttonSwitchLang"
            app:layout_constraintTop_toTopOf="@id/spSourceType"></Spinner>

        <Button
            android:id="@+id/select_photo"
            android:layout_width="135dp"
            android:layout_height="76dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/colors_btn"
            android:onClick="translatePhoto"
            android:text="@string/select_photo"
            android:textColor="#ffffff"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spSourceType" />

        <TextView
            android:id="@+id/bigTitleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:text="@string/title"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/inputView"
            android:layout_width="350dp"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_border"
            android:ems="10"
            android:hint="Type here..."
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bigTitleView" />

        <TextView
            android:id="@+id/outputView"
            android:layout_width="350dp"
            android:layout_height="130dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/bg_border"
            app:layout_constraintBottom_toTopOf="@+id/buttonSwitchLang"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>